feat: доделаны UserServiceImplTest